// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`archive pack options should honour an xrCompress configuration 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Pack config: <sandbox>/compress.ltx",
    "Pack source: <resources>/gamedata/configs",
    "Pack destination: <sandbox>/configured",
    "Wrote <sandbox>/configured/cfg.db",
    "Packed 7 file(s) into 1 volume(s) in <duration>",
    "Summary: 7 compressed, 0 stored, 0 aliased, 7 skipped",
    "Size: 8.33 KB source, 3.83 KB written",
  ],
}
`;

exports[`archive pack options should honour the same configuration written as a document 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Pack config: <sandbox>/compress.json",
    "Pack source: <resources>/gamedata/configs",
    "Pack destination: <sandbox>/configured-json",
    "Wrote <sandbox>/configured-json/cfg.db",
    "Packed 7 file(s) into 1 volume(s) in <duration>",
    "Summary: 7 compressed, 0 stored, 0 aliased, 7 skipped",
    "Size: 8.33 KB source, 3.83 KB written",
  ],
}
`;

exports[`archive pack options should keep them when the skip list is off 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Pack source: <sandbox>/source",
    "Pack destination: <sandbox>/kept",
    "Wrote <sandbox>/kept/a.db",
    "Packed 15 file(s) into 1 volume(s) in <duration>",
    "Summary: 14 compressed, 1 stored, 0 aliased, 0 skipped",
    "Size: 11.5 KB source, 5.39 KB written",
  ],
}
`;

exports[`archive pack options should refuse a configuration whose extension names no format 1`] = `
{
  "exitCode": 1,
  "stderr": [
    "Error: Invalid error: Cannot read '<sandbox>/compress.txt' as a packing configuration: '.txt' is not one. Name it '.ltx' for the xrCompress dialect or '.json' for a portable configuration document.",
  ],
  "stdout": [
    "Pack config: <sandbox>/compress.txt",
  ],
}
`;

exports[`archive pack options should skip editor leftovers by default 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Pack source: <sandbox>/source",
    "Pack destination: <sandbox>/skipped",
    "Wrote <sandbox>/skipped/a.db",
    "Packed 14 file(s) into 1 volume(s) in <duration>",
    "Summary: 14 compressed, 0 stored, 0 aliased, 1 skipped",
    "Size: 11.5 KB source, 5.36 KB written",
  ],
}
`;

exports[`archive pack options should store instead of compressing and write an xdb 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Pack source: <resources>/gamedata/configs",
    "Pack destination: <sandbox>/stored",
    "Wrote <sandbox>/stored/cfg.xdb",
    "Packed 14 file(s) into 1 volume(s) in <duration>",
    "Summary: 0 compressed, 14 stored, 0 aliased, 0 skipped",
    "Size: 11.5 KB source, 12 KB written",
  ],
}
`;

exports[`archive pack options should write the expected files 1`] = `
[
  {
    "path": "compress.json",
    "sha256": "a1bdd9e83146fb056d3ae63fec02e813c780bf8fa4b205a75d0f08c1bac9e8a3",
    "size": 136,
  },
  {
    "path": "compress.ltx",
    "sha256": "42efa649cb57f4f152ac3ca2329b1b07e247d87f5584153ad3e25327d36e6b63",
    "size": 55,
  },
  {
    "path": "compress.txt",
    "sha256": "548e0f5ef02131247b1b50485ab93db4bef53e143eced53f6b428e4c3265ce8d",
    "size": 31,
  },
  {
    "path": "configured-json/cfg.db",
    "sha256": "c54c4162a2c7a29efaaf21a56214dc4819e06b2d5a8996aebd889ebf2a86a76b",
    "size": 3921,
  },
  {
    "path": "configured/cfg.db",
    "sha256": "c54c4162a2c7a29efaaf21a56214dc4819e06b2d5a8996aebd889ebf2a86a76b",
    "size": 3921,
  },
  {
    "path": "kept/a.db",
    "sha256": "e3fd14aa47e9aaf0c4a5a58c4c34b28bac08705a5ecffa2a91381b41b0f4ce3e",
    "size": 5517,
  },
  {
    "path": "skipped/a.db",
    "sha256": "bd5e46067436b520a9f801d177a7204c8834e7a60185a8aff4af226d32ae038c",
    "size": 5491,
  },
  {
    "path": "source/alife.ltx",
    "sha256": "160920506a492754ff5c45ceb7f4d169e19e002dff25be0cfe03b1cc671b91cd",
    "size": 781,
  },
  {
    "path": "source/defines.ltx",
    "sha256": "3901c71e698c9be76fd7502c7837f9ee3176c592edcb120156788f1ad1957b7d",
    "size": 3848,
  },
  {
    "path": "source/evaluation.ltx",
    "sha256": "13b3971565375db44d091d58246aaf728df84d55f61adcd232f1351b621e81cc",
    "size": 276,
  },
  {
    "path": "source/fonts.ltx",
    "sha256": "c68091a9f10ac4545cd0818f9e1a98194898f8fe3483e620328122353e50b93d",
    "size": 2021,
  },
  {
    "path": "source/game.ltx",
    "sha256": "c502a7d26aff39902fcd3631e65c37b732a8e85470aff4267cbb04f36a30184b",
    "size": 218,
  },
  {
    "path": "source/gameplay/dialogs.xml",
    "sha256": "6583bab4e036cca053ce8c820639a39b80dc7bae71d4adba54d5ee2d865cc5b4",
    "size": 1670,
  },
  {
    "path": "source/gameplay/dialogs_zaton.xml",
    "sha256": "aaaaff52afc3c50a3907ba992d7b73f69e90146421385d22f07d363131e474b9",
    "size": 548,
  },
  {
    "path": "source/misc/inventory_icons.ltx",
    "sha256": "5c7b9ae42acbb5e29fe65dc0b14417681fbca966fafac096807a369e30779c2a",
    "size": 1126,
  },
  {
    "path": "source/readme.txt",
    "sha256": "9a0f2b10fc240fbd22e58339818c4925a785357c01add69f031786f866c2cede",
    "size": 9,
  },
  {
    "path": "source/system.ltx",
    "sha256": "b4a4a566d26d645fbb86678c4c16dc9fd8b540b786b191c596801de49ff60da1",
    "size": 265,
  },
  {
    "path": "source/text/eng/st_items.xml",
    "sha256": "c0b041ad4bbb98e0578a0d2e7a2cf84cf10271919fad252b7cb79c62b605b89d",
    "size": 203,
  },
  {
    "path": "source/text/eng/st_ui.xml",
    "sha256": "6eb95635b812a217ea18561f4aab2c1dea34da97683264abf1346a404358fbb3",
    "size": 143,
  },
  {
    "path": "source/text/ukr/st_items.xml",
    "sha256": "be9f8767ee5af7d6e2f9378733b862fb52eae569d9dfd2e3686dafe3d6566ec4",
    "size": 203,
  },
  {
    "path": "source/text/ukr/st_ui.xml",
    "sha256": "d35cba9d839aafedf40bb61b4cebfe0c5fda810499ad49e154ed577eed5f7f61",
    "size": 143,
  },
  {
    "path": "source/ui/textures_descr/ui_test_sheet.xml",
    "sha256": "44329d941bf367bbd107efb9eb255aa12752cb550d3b99d7b88a2d1d91090012",
    "size": 352,
  },
  {
    "path": "stored/cfg.xdb",
    "sha256": "900185dcc78394b0764b652dac506cb23a31388de9e5455f5e72886937541aa9",
    "size": 12266,
  },
]
`;
